--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-range": "^1.10.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
