--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-range": "^1.10.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.19.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
