--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@supabase/supabase-js": "^2.49.4",
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-credit-cards-2": "^1.0.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-range": "^1.10.0",
